--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "matomo/device-detector": "^6.4"
+        "matomo/device-detector": "^6.4",
+        "spatie/laravel-translatable": "^6.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
