Add Viva Payments

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.9",
         "matomo/device-detector": "^6.4",
         "outerweb/filament-translatable-fields": "^2.0",
+        "sebdesign/laravel-viva-payments": "^6.1",
         "spatie/laravel-translatable": "^6.10"
     },
     "require-dev": {
